<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:background="@color/back">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/description"
        android:textAlignment="center"
        android:textSize="26sp"
        android:textColor="@color/white"/>

    <RadioGroup
        android:id="@+id/radioGroupFilling"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginStart="10dp">

        <RadioButton
            android:id="@+id/radioFillingChery"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cherryFilling"
            android:textSize="16sp"
            android:textColor="@color/color_cherry"
            android:checked="true"/>

        <RadioButton
            android:id="@+id/radioFillingApple"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/appleFilling"
            android:textSize="16sp"
            android:textColor="@color/color_apple"/>

        <RadioButton
            android:id="@+id/radioFillingCurrant"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/currantFilling"
            android:textSize="16sp"
            android:textColor="@color/color_currant"/>

        <RadioButton
            android:id="@+id/radioFillingLemon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lemonFilling"
            android:textSize="16sp"
            android:textColor="@color/color_lemon"/>
    </RadioGroup>

    <CheckBox
        android:id="@+id/checkboxFry"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="@string/checkFry"
        android:textColor="@color/white"
        android:textSize="16sp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Switch
            android:id="@+id/switchCutlery"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cutlery"
            android:textColor="@color/white"
            android:layout_weight="1"/>

        <ToggleButton
            android:id="@+id/togglePay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textOff="@string/payCash"
            android:textOn="@string/payCard"
            android:layout_weight="1"/>
    </LinearLayout>

    <EditText
        android:id="@+id/comment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enterPhone"
        android:inputType="phone"
        android:importantForAutofill="no" />

    <Button
        android:id="@+id/buttonOrder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/order"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <TextView
        android:id="@+id/resultText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="22sp"
        android:textAlignment="center"
        android:textColor="@color/white"/>

</LinearLayout>